# django-rdcapp

./: .gitignore  README.md  ]  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  rdcapp_db_backup_160324.dump  readme.md  requirements.txt  requirements_.txt  ruff.toml
apps/rdcapp_api/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/: Dockerfile  Makefile  keys.txt  keys.txt.pub  manage.py  models.py  models___.py  requirements.txt  sources.list_backup
backend/nginx-conf.d/: test.sokolovbiz.ru.conf
backend/rdc_app/: asgi.py  settings.py  urls.py  wsgi.py
backend/rdcapp_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
config/: asgi.py  urls.py  wsgi.py
config/components/: base.py
config/environments/: dev.py  prod.py
data/DATASETS/: MunicipalitySpr.csv  MunicipalitySpr_19032024_OKTMO.csv  MunicipalitySpr_OKTMO_190324.csv
data/DATA_EXPORT_DB/: EduInstSignSpr.csv  EduInstSignSpr.xlsx  EduInstTypeSpr.csv  EduInstTypeSpr.xlsx  Employee.xlsx  MunicipalitySpr.csv  MunicipalitySpr.xlsx  Municipality|Region.csv  Municipality|Region.xlsm  Municipality|Region.xlsx  RDC_DB_BACKUP_080324.sql  RegionSpr.csv  RegionSpr.xlsx  ~$Municipality|Region.xlsm
data/Models/: Department_model.csv  EduInstitutionSpr_model.csv  EduInstitutionSpr_model_.csv  Employee_model.csv  Managment_model.csv  MunicipalitySpr_model.csv  Post_model.csv  RCSpr_model.csv
deploy/: restore_db.sh
envs/local/: django.env
envs/prod/: django.env
scripts/: excel_parser.py  import_from_excel.py
(+48 files in other folders)
