[tool.poetry]
name = "django-rdcapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

django = "^5.0.4"
djangorestframework = "^3.15.1"
django-environ = "^0.11.2"
django-cors-headers = "^4.3.1"
django-import-export = "^3.3.8"

djoser = "^2.2.2"

gunicorn = "^22.0.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
